add link to install instructions

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -52,7 +52,9 @@
    "source": [
     "## How to install/run the notebooks of this clinic?\n",
     "\n",
-    "TODO"
+    "Follow the instructions on https://github.com/benbovy/jupyter-dash-csdms2021 (I'd suggest using the conda/mamba option).\n",
+    "\n",
+    "Please report any issue here (or using the chat): https://hackmd.io/@K3vJcQ1QTI27pu-k4hNtjQ/csdms-2021-jupyter-dash/edit"
    ]
   },
   {
