Jupyter notebook/lab essentials

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -227,7 +227,48 @@
     "    - [Pydeck](https://pydeck.gl/): 3D tiled maps\n",
     "    - [Ipygany](https://github.com/QuantStack/ipygany): 3D scientific visualization\n",
     "    - [Ipycanvas](https://github.com/martinRenou/ipycanvas): interactive drawing\n",
-    "    - [Ipydatagrid](https://github.com/bloomberg/ipydatagrid), [Ipytree](https://github.com/QuantStack/ipytree), [Ipysheet](https://github.com/QuantStack/ipysheet), and much more..."
+    "    - [Ipydatagrid](https://github.com/bloomberg/ipydatagrid), [Ipytree](https://github.com/QuantStack/ipytree), [Ipysheet](https://github.com/QuantStack/ipysheet), and much more...\n",
+    "    \n",
+    "### Jupyter notebook/lab essentials\n",
+    "\n",
+    "- to open a notebook: double-click it in the file browser (left-pane)\n",
+    "- to hide the file browser: click on the folder icon in the left-pane\n",
+    "- to run a single code cell in the notebook: Push Shift and Enter, or use the \"play\" button\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "activeView": "grid_default",
+      "views": {
+       "grid_default": {
+        "col": null,
+        "height": 2,
+        "hidden": true,
+        "row": null,
+        "width": 2
+       }
+      }
+     }
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 1"
    ]
   },
   {
@@ -262,7 +303,7 @@
        "grid_default": {
         "col": 0,
         "height": 3,
-        "hidden": false,
+        "hidden": true,
         "row": 0,
         "width": 12
        }
@@ -282,11 +323,11 @@
       "activeView": "grid_default",
       "views": {
        "grid_default": {
-        "col": null,
-        "height": 2,
-        "hidden": true,
-        "row": null,
-        "width": 2
+        "col": 0,
+        "height": 3,
+        "hidden": false,
+        "row": 0,
+        "width": 12
        }
       }
      }
@@ -301,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -318,7 +359,22 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "349784136a294fb499be2f0750da8fd1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(MultiCanvas(height=660, width=510), VBox(children=(HBox(children=(Button(description='Start', i…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from gboard import Board\n",
     "\n",
@@ -352,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -369,7 +425,22 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='640px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import xarray as xr\n",
     "from ipyfastscape import TopoViz3d\n",
