add exercise solutions

--- a/notebooks/solutions/03-channel-erosion-1d.ipynb
+++ b/notebooks/solutions/03-channel-erosion-1d.ipynb
@@ -275,10 +275,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f78f6184-8714-4bcc-9987-2ded578b1be1",
+   "id": "b81c7594-408c-4e9e-bb5b-6a87a076144b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "819e5a89-0814-413e-86f4-7230e02f91cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create an output widget\n",
+    "out = widgets.Output()\n",
+    "\n",
+    "# create an button\n",
+    "button = widgets.Button(description=\"Run Model\")\n",
+    "\n",
+    "# create a function that will run the simulation and generate the figure (and display it in the output widget)\n",
+    "def run_and_plot(button):\n",
+    "    inputs, outputs = run()\n",
+    "    fig = plot(inputs, outputs)\n",
+    "    \n",
+    "    out.clear_output()\n",
+    "    \n",
+    "    with out:\n",
+    "        display(fig)\n",
+    "\n",
+    "# use that function as a callback for the button\n",
+    "button.on_click(run_and_plot)\n",
+    "\n",
+    "# show the button and the output\n",
+    "widgets.VBox([button, out])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,10 +332,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f8fa7f-876f-4c5f-ad53-983e2ed882fe",
+   "id": "d390401c-6bac-4a93-9585-abdbe25b3efb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create an output widget\n",
+    "out = widgets.Output()\n",
+    "\n",
+    "# create a button\n",
+    "button = widgets.Button(description=\"Run Model\")\n",
+    "\n",
+    "# create sliders (or other input numeric widgets) for K and U\n",
+    "k_slider = widgets.FloatLogSlider(value=5e-05, min=-7, max=-4, description=\"K\")\n",
+    "u_slider = widgets.FloatSlider(value=0.004, min=0.001, max=0.01, step=0.001, description=\"U\")\n",
+    "\n",
+    "# create a function that will run the simulation and generate the figure (and display it in the output widget)\n",
+    "def run_and_plot(button):\n",
+    "    \n",
+    "    # get input values from the input widgets\n",
+    "    inputs, outputs = run(K=k_slider.value, U=u_slider.value)\n",
+    "    fig = plot(inputs, outputs)\n",
+    "    \n",
+    "    out.clear_output()\n",
+    "    \n",
+    "    with out:\n",
+    "        display(fig)\n",
+    "\n",
+    "# use that function as a callback for the button\n",
+    "button.on_click(run_and_plot)\n",
+    "\n",
+    "# show the button and the output\n",
+    "sliders = widgets.HBox([k_slider, u_slider])\n",
+    "widgets.VBox([sliders, button, out])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -317,10 +379,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12a9dce7-dde4-427b-82f9-b6f57aa8c6b6",
+   "id": "91015235-f8d3-46a9-8c09-18ab4097f28a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create an output widget\n",
+    "out = widgets.Output(layout={'width': '500px', 'height': '500px'})\n",
+    "\n",
+    "# create a button\n",
+    "button = widgets.Button(\n",
+    "    description=\"Run Model\", layout={'width': '95%', 'height': '40px'})\n",
+    "button.style.font_weight = 'bold'\n",
+    "\n",
+    "# input widgets\n",
+    "istyle = {'description_width': '200px'}\n",
+    "\n",
+    "iw = {}\n",
+    "\n",
+    "iw['ka'] = widgets.FloatText(value=6.69, description=\"coefficient\", style=istyle)\n",
+    "iw['h'] = widgets.FloatText(value=1.67, description=\"exponent\", style=istyle)\n",
+    "\n",
+    "iw['K'] = widgets.FloatText(value=5e-5, description=\"bedrock erodibility\", style=istyle)\n",
+    "iw['m_n'] = widgets.FloatText(value=0.5, description=\"m/n ratio\", style=istyle)\n",
+    "\n",
+    "iw['U'] = widgets.FloatText(value=0.004, description=\"uplift rate\", style=istyle)\n",
+    "\n",
+    "iw['z_init'] = widgets.Dropdown(\n",
+    "    options=['ramp', 'flat', 'steady'], value='steady', style=istyle\n",
+    ")\n",
+    "iw['islope'] = widgets.FloatText(\n",
+    "    value=0.01, description=\"initial channel slope (ramp)\", style=istyle\n",
+    ")\n",
+    "iw['plat_z'] = widgets.FloatText(\n",
+    "    value=1.0, description=\"initial plateau elevation (flat)\", style=istyle\n",
+    ")\n",
+    "iw['Ki'] = widgets.FloatText(\n",
+    "    value=5e-4, description=\"bedrock erodibility (steady)\", style=istyle\n",
+    ")\n",
+    "iw['Ui'] = widgets.FloatText(\n",
+    "    value=0.002, description=\"uplift rate (steady)\", style=istyle\n",
+    ")\n",
+    "\n",
+    "iw_groups = {\n",
+    "    \"Hack's law\": ['ka', 'h'],\n",
+    "    \"Stream Power law\": ['K', 'm_n'],\n",
+    "    \"Uplift\": ['U'],\n",
+    "    \"Initial conditions\": ['z_init', 'islope', 'plat_z', 'Ki', 'Ui']\n",
+    "}\n",
+    "\n",
+    "accordion = widgets.Accordion(layout={'width': '95%'})\n",
+    "accordion.children = [\n",
+    "    widgets.VBox([iw[k] for k in group]) for group in iw_groups.values()\n",
+    "]\n",
+    "for i, group in enumerate(iw_groups):\n",
+    "    accordion.set_title(i, group)\n",
+    "\n",
+    "controls = widgets.VBox([button, accordion], layout={'width': '500px'})\n",
+    "\n",
+    "# create a function that will run the simulation and generate the figure (and display it in the output widget)\n",
+    "def run_and_plot(button):\n",
+    "    \n",
+    "    # get input values from the input widgets\n",
+    "    inputs, outputs = run(**{key: widget.value for key, widget in iw.items()})\n",
+    "    fig = plot(inputs, outputs)\n",
+    "    \n",
+    "    out.clear_output()\n",
+    "    \n",
+    "    with out:\n",
+    "        display(fig)\n",
+    "\n",
+    "# use that function as a callback for the button\n",
+    "button.on_click(run_and_plot)\n",
+    "\n",
+    "# show the button and the output\n",
+    "widgets.HBox([controls, out])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,6 +468,80 @@
     "\n",
     "- instead of re-creating the matplotlib figure from scratch, start creating a figure from a model run with some default parameter values and show it directly (you can copy code from the `plot` function above). Let's skip drawing the intermediate river profiles for more simplicity.\n",
     "- create a widget \"callback\" function that will re-run a new simulation (possibly with new parameter values) and that will update the line data (x, y) in the existing plot.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd1437a-3c2d-4a52-a46f-0bf267048d86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create sliders (or other input numeric widgets) for K and U\n",
+    "# continuous_update=False avoids continuously run the whole simulation\n",
+    "# while moving the slider.\n",
+    "k_slider = widgets.FloatLogSlider(\n",
+    "    value=5e-05, min=-7, max=-4, description=\"K\", continuous_update=False\n",
+    ")\n",
+    "u_slider = widgets.FloatSlider(\n",
+    "    value=0.004, min=0.001, max=0.01, step=0.001, description=\"U\", continuous_update=False\n",
+    ")\n",
+    "\n",
+    "# run default simulation\n",
+    "inputs, outputs = run(K=k_slider.value, U=u_slider.value)\n",
+    "\n",
+    "# --- generate figure and plot result from the default simulation\n",
+    "plt.ioff()\n",
+    "\n",
+    "fig, ax = plt.subplots(nrows=2, figsize=(6, 6))\n",
+    "\n",
+    "# plot initial condition (in red)\n",
+    "zli, = ax[0].plot(inputs['x'], outputs['z'][0], c='r')\n",
+    "sli, = ax[1].plot(inputs['log_a'], outputs['log_s'][0], c='r')\n",
+    "\n",
+    "# plot the final solution (in green)\n",
+    "zlf, = ax[0].plot(inputs['x'], outputs['z'][-1], c='g')\n",
+    "slf, = ax[1].plot(inputs['log_a'], outputs['log_s'][-1], c='g')\n",
+    "\n",
+    "# calculate and plot the analytic solution at steady-state\n",
+    "z_steady = outputs['z'][-1][-1] + steady_profile(inputs['x'], inputs['U'], inputs['K'], inputs)\n",
+    "log_s = log_slope(z_steady, inputs['dx'])\n",
+    "zls, = ax[1].plot(inputs['log_a'], log_s, c='k', alpha=0.7, ls='--')\n",
+    "sls, = ax[0].plot(inputs['x'], z_steady, c='k', alpha=0.7, ls='--')\n",
+    "\n",
+    "# plot refinements\n",
+    "plt.setp(ax[0],\n",
+    "         xlabel='distance from divide [m]',\n",
+    "         ylabel='elevation [m]')\n",
+    "plt.setp(ax[1],\n",
+    "         xlabel='log drainage area [$\\log$(m$^2$)]',\n",
+    "         ylabel='log channel gradient [#]')\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "\n",
+    "def update_figure(change):\n",
+    "    inputs, outputs = run(K=k_slider.value, U=u_slider.value)\n",
+    "    \n",
+    "    zli.set_data(inputs['x'], outputs['z'][0])\n",
+    "    sli.set_data(inputs['log_a'], outputs['log_s'][0])\n",
+    "    \n",
+    "    zlf.set_data(inputs['x'], outputs['z'][-1])\n",
+    "    slf.set_data(inputs['log_a'], outputs['log_s'][-1])\n",
+    "    \n",
+    "    z_steady = outputs['z'][-1][-1] + steady_profile(inputs['x'], inputs['U'], inputs['K'], inputs)\n",
+    "    log_s = log_slope(z_steady, inputs['dx'])\n",
+    "    zls.set_data(inputs['log_a'], log_s)\n",
+    "    sls.set_data(inputs['x'], z_steady)\n",
+    "    \n",
+    "    fig.canvas.draw()\n",
+    "    fig.canvas.flush_events()\n",
+    "    \n",
+    "\n",
+    "k_slider.observe(update_figure)\n",
+    "u_slider.observe(update_figure)\n",
+    "    \n",
+    "sliders = widgets.HBox([k_slider, u_slider])\n",
+    "widgets.VBox([sliders, fig.canvas])"
    ]
   },
   {
